# python-micro-service-example

./: README.md
consumer/: config.py  consumer.py  dockerfile  requirements.txt
micro/: pyproject.toml
micro/app/: __main__.py  config.py  database.py  streams_service.py
micro/app/db/: __init__.py
micro/app/rest_api/: crud.py  rest_routes.py
micro/app/schemas/: stream.py
micro/app/utils/: logger.py
producer/: config.py  dockerfile  publisher.py  requirements.txt
