[tool.poetry]
name = "micro"
version = "0.1.0"
description = ""
authors = ["Raz Elbaz <93310416+RazElbaz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
